# dragon_claw

./: .gitmodules  CMakeLists.txt  Readme.md  package.xml
config/: claw_servo.config.yaml  logi_f310.config.yaml
include/claw/: kinematics.h
launch/: claw.launch.py
src/: gait_synth.cpp  joint_map.cpp  kinematics.cpp
urdf/: claw.xacro
